--- a/index.html
+++ b/index.html
@@ -2,193 +2,152 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8">
-  <title>Quả Cầu Pha Lê Giáng Sinh 3D</title>
+  <title>Quả Cầu Tuyết Giáng Sinh 3D - Chúc Mừng Noel!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin:0; overflow:hidden; background:#000; font-family: Arial, sans-serif; }
+    body { margin:0; overflow:hidden; background:#000; font-family: 'Segoe UI', sans-serif; }
     canvas { display:block; }
     .info {
-      position: absolute; top: 10px; left: 10px; color: white; background: rgba(0,0,0,0.5);
-      padding: 10px; border-radius: 8px; pointer-events: none;
+      position: absolute; top: 15px; left: 15px; color: #fff; background: rgba(0,0,0,0.6);
+      padding: 12px 18px; border-radius: 12px; font-size: 15px; pointer-events: none; z-index: 100;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
     }
   </style>
 </head>
 <body>
-<div class="info">Giữ chuột trái + kéo để xoay quả cầu<br>Chúc bạn Giáng sinh vui vẻ! 🎄✨</div>
 
-<script type="module">
-import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.module.js';
-import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/controls/OrbitControls.js';
-import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/loaders/GLTFLoader.js';
+<div class="info">
+  Giữ chuột trái + kéo để xoay quả cầu<br>
+  <strong>Chúc bạn Giáng Sinh an lành & ấm áp!</strong>
+</div>
 
-// Scene setup
+<!-- Three.js + controls + loader (phiên bản cũ - chạy trực tiếp) -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/examples/js/loaders/GLTFLoader.js"></script>
+
+<script>
+// ============== CẤU HÌNH CƠ BẢN ==============
 const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x0a1a2f);
-scene.fog = new THREE.FogExp2(0x0a1a2f, 0.002);
+scene.background = new THREE.Color(0x0d1b2a);
+scene.fog = new THREE.FogExp2(0x0d1b2a, 0.0018);
 
-// Camera
-const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-camera.position.set(0, 8, 20);
+const camera = new THREE.PerspectiveCamera(60, innerWidth / innerHeight, 0.1, 1000);
+camera.position.set(0, 8, 22);
 
-// Renderer
 const renderer = new THREE.WebGLRenderer({ antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-renderer.setPixelRatio(window.devicePixelRatio);
+renderer.setSize(innerWidth, innerHeight);
+renderer.setPixelRatio(devicePixelRatio);
 renderer.outputEncoding = THREE.sRGBEncoding;
 document.body.appendChild(renderer.domElement);
 
-// Ánh sáng
-const ambient = new THREE.AmbientLight(0xffffff, 0.6);
-scene.add(ambient);
-
-const dirLight = new THREE.DirectionalLight(0xffffff, 1);
-dirLight.position.set(10, 20, 10);
-scene.add(dirLight);
-
-const hemiLight = new THREE.HemisphereLight(0x87CEEB, 0x3b1e40, 0.8);
-scene.add(hemiLight);
-
-// Controls - giữ chuột trái kéo để xoay quả cầu
-const controls = new OrbitControls(camera, renderer.domElement);
+// Controls - kéo chuột trái để xoay
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
 controls.enableDamping = true;
-controls.dampingFactor = 0.05;
-controls.rotateSpeed = 0.5;
-controls.enableZoom = true;
+controls.dampingFactor = 0.07;
+controls.rotateSpeed = 0.6;
 controls.enablePan = false;
 controls.minDistance = 15;
-controls.maxDistance = 40;
+controls.maxDistance = 45;
 controls.maxPolarAngle = Math.PI / 2 + 0.2;
 
-// Nhóm chứa toàn bộ quả cầu để xoay
+// Ánh sáng
+scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+const dirLight = new THREE.DirectionalLight(0xffffff, 1.2);
+dirLight.position.set(15, 25, 10);
+scene.add(dirLight);
+scene.add(new THREE.HemisphereLight(0x87CEEB, 0x3b1e40, 0.9));
+
+// Nhóm chứa toàn bộ quả cầu (để xoay chung)
 const globeGroup = new THREE.Group();
 scene.add(globeGroup);
 
-// === 1. Mặt đất tuyết ===
-const groundGeo = new THREE.CircleGeometry(80, 64);
-const groundMat = new THREE.MeshStandardMaterial({ 
-  color: 0xf8f8ff, 
-  roughness: 0.9, 
-  metalness: 0 
-});
-const ground = new THREE.Mesh(groundGeo, groundMat);
+// ============== NỀN TUYẾT + NHÀ + CÂY THÔNG NGOÀI TRỜI ==============
+// Mặt đất tuyết
+const ground = new THREE.Mesh(
+  new THREE.CircleGeometry(100, 64),
+  new THREE.MeshStandardMaterial({ color: 0xf8f9ff, roughness: 0.95 })
+);
 ground.rotation.x = -Math.PI / 2;
-ground.position.y = -0.1;
+ground.position.y = -0.05;
 scene.add(ground);
 
-// Thêm vài ngôi nhà phủ tuyết
-function createSnowyHouse(pos) {
+// Nhà phủ tuyết
+function createHouse(x, z) {
   const house = new THREE.Group();
-  
-  // Thân nhà
-  const body = new THREE.Mesh(
-    new THREE.BoxGeometry(4, 4, 4),
-    new THREE.MeshStandardMaterial({ color: 0xc41e3a })
-  );
-  body.position.y = 2;
+  const body = new THREE.Mesh(new THREE.BoxGeometry(5, 5, 5), new THREE.MeshStandardMaterial({ color: 0xd32f2f }));
+  body.position.y = 2.5;
   house.add(body);
 
-  // Mái nhà tuyết
-  const roof = new THREE.Mesh(
-    new THREE.ConeGeometry(5, 3, 4),
-    new THREE.MeshStandardMaterial({ color: 0xffffff })
-  );
-  roof.position.y = 5.5;
+  const roof = new THREE.Mesh(new THREE.ConeGeometry(6, 3.5, 4), new THREE.MeshStandardMaterial({ color: 0xffffff }));
+  roof.position.y = 7;
   roof.rotation.y = Math.PI / 4;
   house.add(roof);
 
-  // Tuyết trên mái
-  const snowRoof = new THREE.Mesh(
-    new THREE.ConeGeometry(5.1, 0.5, 4),
-    new THREE.MeshStandardMaterial({ color: 0xf0f8ff })
-  );
-  snowRoof.position.y = 6.8;
-  snowRoof.rotation.y = Math.PI / 4;
-  house.add(snowRoof);
-
-  house.position.copy(pos);
-  house.scale.set(0.8, 0.8, 0.8);
+  house.position.set(x, 0, z);
+  house.scale.set(0.9, 0.9, 0.9);
   scene.add(house);
 }
+createHouse(-18, -22);
+createHouse(20, -15);
+createHouse(-15, 12);
 
-createSnowyHouse(new THREE.Vector3(-15, 0, -20));
-createSnowyHouse(new THREE.Vector3(18, 0, -15));
-createSnowyHouse(new THREE.Vector3(-20, 0, 10));
-
-// Cây thông lớn phủ tuyết bên ngoài
-function createBigTree(pos) {
+// Cây thông lớn phủ tuyết
+function createBigTree(x, z) {
   const tree = new THREE.Group();
-  const trunk = new THREE.Mesh(
-    new THREE.CylinderGeometry(0.8, 1, 4),
-    new THREE.MeshStandardMaterial({ color: 0x8B4513 })
-  );
-  trunk.position.y = 2;
+  const trunk = new THREE.Mesh(new THREE.CylinderGeometry(1, 1.3, 5), new THREE.MeshStandardMaterial({ color: 0x8B4513 }));
+  trunk.position.y = 2.5;
   tree.add(trunk);
 
-  const levels = [4, 3.2, 2.4];
-  levels.forEach((size, i) => {
-    const cone = new THREE.Mesh(
-      new THREE.ConeGeometry(size, 5, 8),
-      new THREE.MeshStandardMaterial({ color: 0x0b6623 })
-    );
-    cone.position.y = 4 + i * 4;
+  [4.5, 3.5, 2.5].forEach((size, i) => {
+    const cone = new THREE.Mesh(new THREE.ConeGeometry(size, 6, 12), new THREE.MeshStandardMaterial({ color: 0x0d6623 }));
+    cone.position.y = 6 + i * 5;
     tree.add(cone);
 
-    // Tuyết trên mỗi tầng
-    const snow = new THREE.Mesh(
-      new THREE.ConeGeometry(size * 0.9, 0.8, 8),
-      new THREE.MeshStandardMaterial({ color: 0xffffff })
-    );
-    snow.position.y = cone.position.y + 2.8;
+    const snow = new THREE.Mesh(new THREE.ConeGeometry(size * 0.85, 1, 12), new THREE.MeshStandardMaterial({ color: 0xffffff }));
+    snow.position.y = cone.position.y + 3;
     tree.add(snow);
   });
-
-  tree.position.copy(pos);
+  tree.position.set(x, 0, z);
   scene.add(tree);
 }
-createBigTree(new THREE.Vector3(25, 0, -10));
-createBigTree(new THREE.Vector3(-25, 0, -20));
+createBigTree(28, -12);
+createBigTree(-25, -20);
 
-// === 2. Quả cầu pha lê ===
-const glassSphereGeo = new THREE.SphereGeometry(8, 64, 64);
-const glassMaterial = new THREE.MeshPhysicalMaterial({
-  color: 0xffffff,
-  metalness: 0,
-  roughness: 0,
-  transmission: 0.98,
-  thickness: 1.5,
-  clearcoat: 1,
-  clearcoatRoughness: 0,
-  ior: 1.5,
-  envMapIntensity: 1.5
-});
-const glassSphere = new THREE.Mesh(glassSphereGeo, glassMaterial);
+// ============== QUẢ CẦU PHA LÊ ==============
+const glassSphere = new THREE.Mesh(
+  new THREE.SphereGeometry(8, 64, 64),
+  new THREE.MeshPhysicalMaterial({
+    color: 0xffffff,
+    metalness: 0,
+    roughness: 0,
+    transmission: 0.98,
+    thickness: 1.8,
+    clearcoat: 1,
+    clearcoatRoughness: 0,
+    ior: 1.5,
+    envMapIntensity: 2
+  })
+);
 globeGroup.add(glassSphere);
 
-// === 3. Giá đỡ vàng ===
-const baseGeo = new THREE.CylinderGeometry(9, 10, 2, 64);
-const goldMat = new THREE.MeshStandardMaterial({
-  color: 0xffd700,
-  metalness: 0.9,
-  roughness: 0.2
-});
-const base = new THREE.Mesh(baseGeo, goldMat);
+// Giá đỡ vàng + chân đế
+const goldMaterial = new THREE.MeshStandardMaterial({ color: 0xffd700, metalness: 0.95, roughness: 0.15 });
+
+const base = new THREE.Mesh(new THREE.CylinderGeometry(9.2, 10, 2, 64), goldMaterial);
 base.position.y = -9.5;
 globeGroup.add(base);
 
-// Chân đế nhỏ
-const stand = new THREE.Mesh(
-  new THREE.CylinderGeometry(4, 5, 3, 64),
-  goldMat
-);
+const stand = new THREE.Mesh(new THREE.CylinderGeometry(4.5, 5.5, 4, 64), goldMaterial);
 stand.position.y = -12;
 globeGroup.add(stand);
 
-// === 4. Bên trong quả cầu ===
-// Cây thông Noel
+// ============== BÊN TRONG QUẢ CẦU ==============
+// Cây thông Noel thật có đèn màu (GLTF)
 let christmasTree;
-const loader = new GLTFLoader();
-loader.load('https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/ChristmasTree/ChristmasTree.gltf', (gltf) => {
+new THREE.GLTFLoader().load('https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/ChristmasTree/ChristmasTree.gltf', (gltf) => {
   christmasTree = gltf.scene;
-  christmasTree.scale.set(3, 3, 3);
+  christmasTree.scale.set(3.2, 3.2, 3.2);
   christmasTree.position.y = -6;
   globeGroup.add(christmasTree);
 });
@@ -197,108 +156,97 @@ loader.load('https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/mode
 function createGift(x, z) {
   const gift = new THREE.Group();
   const box = new THREE.Mesh(
-    new THREE.BoxGeometry(1.5, 1.5, 1.5),
-    new THREE.MeshStandardMaterial({ color: Math.random() > 0.5 ? 0xff0000 : 0x00ff00 })
+    new THREE.BoxGeometry(1.6, 1.6, 1.6),
+    new THREE.MeshStandardMaterial({ color: Math.random() > 0.5 ? 0xff0033 : 0x00aa33 })
   );
   gift.add(box);
 
-  const ribbonH = new THREE.Mesh(
-    new THREE.BoxGeometry(1.7, 0.2, 0.2),
-    new THREE.MeshStandardMaterial({ color: 0xffff00 })
-  );
-  ribbonH.position.y = 0.8;
-  gift.add(ribbonH);
+  const ribbon = new THREE.Mesh(new THREE.BoxGeometry(1.8, 0.25, 0.25), new THREE.MeshStandardMaterial({ color: 0xffff66 }));
+  ribbon.position.y = 0.8;
+  gift.add(ribbon);
+  const ribbon2 = ribbon.clone();
+  ribbon2.rotation.y = Math.PI / 2;
+  gift.add(ribbon2);
 
-  const ribbonV = ribbonH.clone();
-  ribbonV.rotation.y = Math.PI / 2;
-  gift.add(ribbonV);
-
-  gift.position.set(x, -7.2, z);
+  gift.position.set(x, -7.1, z);
   gift.rotation.y = Math.random() * Math.PI;
   globeGroup.add(gift);
 }
-
-for(let i = 0; i < 8; i++) {
-  const angle = i / 8 * Math.PI * 2;
-  const radius = 3 + Math.random() * 2;
-  createGift(Math.cos(angle) * radius, Math.sin(angle) * radius);
+for (let i = 0; i < 10; i++) {
+  const angle = i / 10 * Math.PI * 2;
+  const r = 2.5 + Math.random() * 2.5;
+  createGift(Math.cos(angle) * r, Math.sin(angle) * r);
 }
 
-// === 5. Tuyết rơi bên trong quả cầu ===
+// ============== TUYẾT RƠI BÊN TRONG + NGOÀI TRỜI ==============
 const snowflakes = [];
-const snowGeo = new THREE.SphereGeometry(0.08, 6, 6);
-const snowMat = new THREE.MeshBasicMaterial({ color: 0xffffff });
+const snowGeo = new THREE.SphereGeometry(0.09, 8, 8);
+const snowMat = new THREE.MeshBasicMaterial({ color: 0xffffff, transparent: true, opacity: 0.9 });
 
-for(let i = 0; i < 400; i++) {
-  const snow = new THREE.Mesh(snowGeo, snowMat);
-  snow.position.set(
-    (Math.random() - 0.5) * 14,
-    Math.random() * 20 - 5,
-    (Math.random() - 0.5) * 14
+for (let i = 0; i < 450; i++) {
+  const s = new THREE.Mesh(snowGeo, snowMat);
+  s.position.set(
+    (Math.random() - 0.5) * 15,
+    Math.random() * 25 - 5,
+    (Math.random() - 0.5) * 15
   );
-  globeGroup.add(snow);
-  snowflakes.push(snow);
+  globeGroup.add(s);
+  snowflakes.push(s);
 }
 
-// Animation tuyết rơi
+// Tuyết rơi ngoài trời
+const outsideSnow = [];
+for (let i = 0; i < 350; i++) {
+  const s = new THREE.Mesh(snowGeo, snowMat);
+  s.position.set(
+    (Math.random() - 0.5) * 250,
+    Math.random() * 60 + 10,
+    (Math.random() - 0.5) * 250
+  );
+  scene.add(s);
+  outsideSnow.push(s);
+}
+
+// ============== ANIMATION ==============
 function animateSnow() {
   snowflakes.forEach(s => {
-    s.position.y -= 0.02 + Math.random() * 0.03;
-    s.position.x += Math.sin(Date.now() * 0.001 + s.position.z) * 0.01;
-    
-    if (s.position.y < -14) {
-      s.position.y = 10;
+    s.position.y -= 0.02 + Math.random() * 0.04;
+    s.position.x += Math.sin(Date.now() * 0.0008 + s.position.z) * 0.015;
+    if (s.position.y < -15) {
+      s.position.y = 12;
       s.position.x = (Math.random() - 0.5) * 14;
       s.position.z = (Math.random() - 0.5) * 14;
     }
   });
 }
 
-// === 6. Tuyết rơi bên ngoài (trên nền) ===
-const outsideSnow = [];
-for(let i = 0; i < 300; i++) {
-  const s = new THREE.Mesh(snowGeo, snowMat);
-  s.position.set(
-    (Math.random() - 0.5) * 200,
-    Math.random() * 50 + 10,
-    (Math.random() - 0.5) * 200
-  );
-  scene.add(s);
-  outsideSnow.push(s);
-}
-
 function animateOutsideSnow() {
   outsideSnow.forEach(s => {
-    s.position.y -= 0.03;
-    if (s.position.y < 0) {
-      s.position.y = 50;
-      s.position.x = (Math.random() - 0.5) * 200;
-      s.position.z = (Math.random() - 0.5) * 200;
-    }
+    s.position.y -= 0.035;
+    if (s.position.y < -5) s.position.y = 60;
   });
 }
 
 // Resize
 window.addEventListener('resize', () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.aspect = innerWidth / innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setSize(innerWidth, innerHeight);
 });
 
-// Animation loop
+// Loop chính
 function animate() {
   requestAnimationFrame(animate);
   controls.update();
   animateSnow();
   animateOutsideSnow();
-  
-  if (christmasTree) {
-    christmasTree.rotation.y += 0.003;
-  }
-  
+
+  if (christmasTree) christmasTree.rotation.y += 0.003;
+
   renderer.render(scene, camera);
 }
 animate();
+
 </script>
 </body>
 </html>
