--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     .info {
       position: absolute; top: 15px; left: 15px; color: #fff; background: rgba(0,0,0,0.6);
       padding: 15px 20px; border-radius: 12px; font-size: 16px; pointer-events: none; z-index: 10;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
     }
   </style>
 </head>
@@ -15,149 +16,179 @@
 
 <div class="info">
   Giữ chuột trái + kéo để xoay quả cầu<br>
-  <strong>Chúc mừng Giáng Sinh ấm áp!</strong>
+  <strong>Chúc bạn một Giáng Sinh thật vui vẻ!</strong>
 </div>
 
-<!-- DÙNG CDN MỚI NHẤT + ĐƯỜNG DẪN ĐÚNG 2025 -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/controls/OrbitControls.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/loaders/GLTFLoader.js"></script>
+<!-- DÙNG UNPKG - ĐƯỜNG DẪN CŨ HOÀN TOÀN KHÔNG CẦN MODULE -->
+<script src="https://unpkg.com/three@0.168.0/build/three.min.js"></script>
+<script src="https://unpkg.com/three@0.168.0/examples/js/controls/OrbitControls.js"></script>
+<script src="https://unpkg.com/three@0.168.0/examples/js/loaders/GLTFLoader.js"></script>
 
-<script type="module">
-  // ==== BẮT BUỘC PHẢI DÙNG type="module" KHI DÙNG jsm (đường dẫn mới) ====
-  import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/controls/OrbitControls.js';
-  import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/loaders/GLTFLoader.js';
+<script>
+// ============== TẤT CẢ CODE Ở ĐÂY - KHÔNG DÙNG IMPORT, KHÔNG DÙNG MODULE ==============
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x0b1526);
+scene.fog = new THREE.FogExp2(0x0b1526, 0.0015);
 
-  // === CẤU HÌNH CƠ BẢN ===
-  const scene = new THREE.Scene();
-  scene.background = new THREE.Color(0x0d1b2a);
-  scene.fog = new THREE.FogExp2(0x0d1b2a, 0.0018);
+const camera = new THREE.PerspectiveCamera(60, innerWidth / innerHeight, 0.1, 1000);
+camera.position.set(0, 9, 25);
 
-  const camera = new THREE.PerspectiveCamera(60, innerWidth / innerHeight, 0.1, 1000);
-  camera.position.set(0, 8, 22);
+const renderer = new THREE.WebGLRenderer({ antialias: true });
+renderer.setSize(innerWidth, innerHeight);
+renderer.setPixelRatio(devicePixelRatio);
+document.body.appendChild(renderer.domElement);
 
-  const renderer = new THREE.WebGLRenderer({ antialias: true });
-  renderer.setSize(innerWidth, innerHeight);
-  renderer.setPixelRatio(devicePixelRatio);
-  document.body.appendChild(renderer.domElement);
+// Controls
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.enableDamping = true;
+controls.dampingFactor = 0.08;
+controls.enablePan = false;
+controls.minDistance = 18;
+controls.maxDistance = 50;
 
-  const controls = new OrbitControls(camera, renderer.domElement);
-  controls.enableDamping = true;
-  controls.dampingFactor = 0.07;
-  controls.enablePan = false;
-  controls.minDistance = 15;
-  controls.maxDistance = 45;
+// Ánh sáng
+scene.add(new THREE.AmbientLight(0xffffff, 0.7));
+const dirLight = new THREE.DirectionalLight(0xffffff, 1.4);
+dirLight.position.set(15, 30, 15);
+scene.add(dirLight);
+scene.add(new THREE.HemisphereLight(0xb3e5fc, 0x3d2b5e, 0.8));
 
-  // Ánh sáng
-  scene.add(new THREE.AmbientLight(0xffffff, 0.6));
-  scene.add(new THREE.DirectionalLight(0xffffff, 1.2)).position.set(15, 25, 10);
-  scene.add(new THREE.HemisphereLight(0x87CEEB, 0x3b1e40, 0.9));
+const globeGroup = new THREE.Group();
+scene.add(globeGroup);
 
-  const globeGroup = new THREE.Group();
-  scene.add(globeGroup);
+// === NỀN TUYẾT ===
+const ground = new THREE.Mesh(
+  new THREE.CircleGeometry(120, 64),
+  new THREE.MeshStandardMaterial({ color: 0xf5f8ff, roughness: 0.9 })
+);
+ground.rotation.x = -Math.PI / 2;
+ground.position.y = -0.1;
+scene.add(ground);
 
-  // === NỀN TUYẾT + NHÀ + CÂY THÔNG ===
-  const ground = new THREE.Mesh(
-    new THREE.CircleGeometry(100, 64),
-    new THREE.MeshStandardMaterial({ color: 0xf8f9ff, roughness: 0.95 })
-  );
-  ground.rotation.x = -Math.PI / 2;
-  scene.add(ground);
+// === QUẢ CẦU PHA LÊ ===
+const glass = new THREE.Mesh(
+  new THREE.SphereGeometry(8, 64, 64),
+  new THREE.MeshPhysicalMaterial({
+    color: 0xffffff,
+    metalness: 0,
+    roughness: 0,
+    transmission: 0.98,
+    thickness: 2,
+    clearcoat: 1,
+    clearcoatRoughness: 0,
+    ior: 1.5
+  })
+);
+globeGroup.add(glass);
 
-  // (giữ nguyên các hàm tạo nhà, cây thông như bản trước - mình rút gọn để dễ đọc)
-  // Nhà
-  const houseGeo = new THREE.BoxGeometry(5,5,5);
-  const roofGeo = new THREE.ConeGeometry(6,3.5,4);
-  [-18,20,-15].forEach((x,i) => {
-    const house = new THREE.Group();
-    const body = new THREE.Mesh(houseGeo, new THREE.MeshStandardMaterial({color:0xd32f2f}));
-    body.position.y = 2.5;
-    const roof = new THREE.Mesh(roofGeo, new THREE.MeshStandardMaterial({color:0xffffff}));
-    roof.position.y = 7; roof.rotation.y = Math.PI/4;
-    house.add(body,roof);
-    house.position.set(x,0,[-22,-15,12][i]);
-    scene.add(house);
-  });
+// === GIÁ ĐỠ VÀNG ===
+const goldMat = new THREE.MeshStandardMaterial({ color: 0xffd700, metalness: 0.95, roughness: 0.15 });
+const base = new THREE.Mesh(new THREE.CylinderGeometry(9.5, 10.5, 2, 64), goldMat);
+base.position.y = -9.5;
+globeGroup.add(base);
+const stand = new THREE.Mesh(new THREE.CylinderGeometry(4.5, 5.5, 4, 64), goldMat);
+stand.position.y = -12;
+globeGroup.add(stand);
 
-  // === QUẢ CẦU PHA LÊ + GIÁ ĐỠ VÀNG ===
-  const glass = new THREE.Mesh(
-    new THREE.SphereGeometry(8,64,64),
-    new THREE.MeshPhysicalMaterial({
-      transmission: 0.98, roughness: 0, metalness: 0, thickness: 1.8, clearcoat: 1
-    })
-  );
-  globeGroup.add(glass);
-
-  const gold = new THREE.MeshStandardMaterial({color:0xffd700, metalness:0.95, roughness:0.15});
-  globeGroup.add(new THREE.Mesh(new THREE.CylinderGeometry(9.2,10,2,64), gold)).position.y = -9.5;
-  globeGroup.add(new THREE.Mesh(new THREE.CylinderGeometry(4.5,5.5,4,64), gold)).position.y = -12;
-
-  // === CÂY THÔNG + QUÀ + TUYẾT ===
-  new GLTFLoader().load('https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/ChristmasTree/ChristmasTree.gltf', gltf => {
-    const tree = gltf.scene;
-    tree.scale.set(3.2,3.2,3.2);
+// === CÂY THÔNG NOEL THẬT (GLTF) ===
+let tree;
+new THREE.GLTFLoader().load(
+  'https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/ChristmasTree/ChristmasTree.gltf',
+  gltf => {
+    tree = gltf.scene;
+    tree.scale.set(3.5, 3.5, 3.5);
     tree.position.y = -6;
     globeGroup.add(tree);
-    window.tree = tree; // để xoay
-  });
-
-  // 10 hộp quà
-  for(let i=0; i<10; i++){
-    const angle = i/10*Math.PI*2;
-    const r = 2.5 + Math.random()*2.5;
-    const gift = new THREE.Group();
-    gift.add(new THREE.Mesh(new THREE.BoxGeometry(1.6,1.6,1.6), new THREE.MeshStandardMaterial({color:Math.random()>0.5?0xff0033:0x00aa33})));
-    const ribbon = new THREE.Mesh(new THREE.BoxGeometry(1.8,0.25,0.25), new THREE.MeshStandardMaterial({color:0xffff66}));
-    gift.add(ribbon);
-    gift.add(ribbon.clone().rotateY(Math.PI/2));
-    gift.position.set(Math.cos(angle)*r, -7.1, Math.sin(angle)*r);
-    globeGroup.add(gift);
   }
+);
+
+// === HỘP QUÀ ===
+for(let i = 0; i < 12; i++){
+  const angle = i/12 * Math.PI * 2;
+  const r = 2 + Math.random() * 3;
+  const gift = new THREE.Group();
+  const box = new THREE.Mesh(
+    new THREE.BoxGeometry(1.5,1.5,1.5),
+    new THREE.MeshStandardMaterial({ color: Math.random()>0.5 ? 0xff0033 : 0x00aa00 })
+  );
+  gift.add(box);
+  const ribbon = new THREE.Mesh(new THREE.BoxGeometry(1.7,0.2,0.2), new THREE.MeshStandardMaterial({color:0xffff33}));
+  ribbon.position.y = 0.75;
+  gift.add(ribbon);
+  gift.add(ribbon.clone().rotateY(Math.PI/2));
+  gift.position.set(Math.cos(angle)*r, -7.2, Math.sin(angle)*r);
+  gift.rotation.y = Math.random() * Math.PI;
+  globeGroup.add(gift);
+}
+
+// === TUYẾT RƠI TRONG QUẢ CẦU ===
+const snowflakes = [];
+for(let i = 0; i < 500; i++){
+  const s = new THREE.Mesh(
+    new THREE.SphereGeometry(0.08, 6, 6),
+    new THREE.MeshBasicMaterial({ color: 0xffffff })
+  );
+  s.position.set(
+    (Math.random()-0.5)*14,
+    Math.random()*20 - 4,
+    (Math.random()-0.5)*14
+  );
+  globeGroup.add(s);
+  snowflakes.push(s);
+}
+
+// === TUYẾT RƠI NGOÀI TRỜI ===
+const outsideSnow = [];
+for(let i = 0; i < 400; i++){
+  const s = new THREE.Mesh(
+    new THREE.SphereGeometry(0.08, 6, 6),
+    new THREE.MeshBasicMaterial({ color: 0xffffff, transparent: true, opacity: 0.8 })
+  );
+  s.position.set(
+    (Math.random()-0.5)*300,
+    Math.random()*80 + 10,
+    (Math.random()-0.5)*300
+  );
+  scene.add(s);
+  outsideSnow.push(s);
+}
+
+// === ANIMATION ===
+function animate() {
+  requestAnimationFrame(animate);
+  controls.update();
 
   // Tuyết trong quả cầu
-  const snowflakes = [];
-  for(let i=0; i<450; i++){
-    const s = new THREE.Mesh(new THREE.SphereGeometry(0.09,8,8), new THREE.MeshBasicMaterial({color:0xffffff, transparent:true, opacity:0.9}));
-    s.position.set((Math.random()-0.5)*15, Math.random()*25-5, (Math.random()-0.5)*15);
-    globeGroup.add(s);
-    snowflakes.push(s);
-  }
+  snowflakes.forEach(s => {
+    s.position.y -= 0.03 + Math.random()*0.03;
+    s.position.x += Math.sin(Date.now()*0.001 + s.position.z)*0.02;
+    if(s.position.y < -15){
+      s.position.y = 12;
+      s.position.x = (Math.random()-0.5)*14;
+      s.position.z = (Math.random()-0.5)*14;
+    }
+  });
 
   // Tuyết ngoài trời
-  const outside = [];
-  for(let i=0; i<350; i++){
-    const s = new THREE.Mesh(new THREE.SphereGeometry(0.09,8,8), new THREE.MeshBasicMaterial({color:0xffffff, transparent:true, opacity:0.8}));
-    s.position.set((Math.random()-0.5)*250, Math.random()*60+10, (Math.random()-0.5)*250);
-    scene.add(s);
-    outside.push(s);
-  }
+  outsideSnow.forEach(s => {
+    s.position.y -= 0.04;
+    if(s.position.y < -5) s.position.y = 80;
+  });
 
-  // === ANIMATION ===
-  function anim() {
-    requestAnimationFrame(anim);
-    controls.update();
+  // Xoay cây thông nhẹ
+  if(tree) tree.rotation.y += 0.004;
 
-    // tuyết trong
-    snowflakes.forEach(s=>{
-      s.position.y -= 0.03;
-      s.position.x += Math.sin(Date.now()*0.001 + s.position.z)*0.02;
-      if(s.position.y < -15) s.position.y = 12;
-    });
-    // tuyết ngoài
-    outside.forEach(s=>{ s.position.y -= 0.03; if(s.position.y < -5) s.position.y = 60; });
+  renderer.render(scene, camera);
+}
+animate();
 
-    if(window.tree) window.tree.rotation.y += 0.003;
-
-    renderer.render(scene, camera);
-  }
-  anim();
-
-  // Resize
-  window.onresize = () => {
-    camera.aspect = innerWidth/innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(innerWidth, innerHeight);
-  };
+// Resize
+window.addEventListener('resize', () => {
+  camera.aspect = innerWidth/innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(innerWidth, innerHeight);
+});
 </script>
+
 </body>
 </html>
