--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <strong>Chúc bạn một Giáng Sinh thật vui vẻ!</strong>
 </div>
 
-<!-- DÙNG UNPKG - ĐƯỜNG DẪN CŨ HOÀN TOÀN KHÔNG CẦN MODULE -->
-<script src="https://unpkg.com/three@0.168.0/build/three.min.js"></script>
-<script src="https://unpkg.com/three@0.168.0/examples/js/controls/OrbitControls.js"></script>
-<script src="https://unpkg.com/three@0.168.0/examples/js/loaders/GLTFLoader.js"></script>
+<!-- FIX: Dùng r128 từ cdnjs + unpkg cho examples/js (tương thích UMD, không module) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+<script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
 // ============== TẤT CẢ CODE Ở ĐÂY - KHÔNG DÙNG IMPORT, KHÔNG DÙNG MODULE ==============
