--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8">
-  <title>Quả Cầu Tuyết Giáng Sinh 3D</title>
+  <title>Quả Cầu Tuyết Giáng Sinh 3D - Đẹp Lung Linh!</title>
   <style>
-    body { margin:0; overflow:hidden; background:#000; }
+    body { margin:0; overflow:hidden; background:#0b1320; }
     .info {
       position: absolute; top: 15px; left: 15px; color: #fff; background: rgba(0,0,0,0.6);
-      padding: 15px 20px; border-radius: 12px; font-size: 16px; pointer-events: none; z-index: 10;
+      padding: 15px 22px; border-radius: 12px; font-size: 16px; pointer-events: none; z-index: 10;
       box-shadow: 0 4px 20px rgba(0,0,0,0.5);
     }
   </style>
@@ -16,166 +16,158 @@
 
 <div class="info">
   Giữ chuột trái + kéo để xoay quả cầu<br>
-  <strong>Chúc bạn một Giáng Sinh thật vui vẻ!</strong>
+  <strong>Chúc bạn Giáng Sinh thật hạnh phúc!</strong>
 </div>
 
-<!-- FIX: Dùng r128 từ cdnjs + unpkg cho examples/js (tương thích UMD, không module) -->
+<!-- Dùng r128 + đường dẫn cũ để chạy local 100% -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-// ============== TẤT CẢ CODE Ở ĐÂY - KHÔNG DÙNG IMPORT, KHÔNG DÙNG MODULE ==============
+// ============== CƠ BẢN ==============
 const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x0b1526);
-scene.fog = new THREE.FogExp2(0x0b1526, 0.0015);
+scene.background = new THREE.Color(0x0a1a3d);
 
-const camera = new THREE.PerspectiveCamera(60, innerWidth / innerHeight, 0.1, 1000);
-camera.position.set(0, 9, 25);
+const camera = new THREE.PerspectiveCamera(60, innerWidth/innerHeight, 0.1, 1000);
+camera.position.set(0, 8, 28);
 
 const renderer = new THREE.WebGLRenderer({ antialias: true });
 renderer.setSize(innerWidth, innerHeight);
 renderer.setPixelRatio(devicePixelRatio);
 document.body.appendChild(renderer.domElement);
 
-// Controls
 const controls = new THREE.OrbitControls(camera, renderer.domElement);
 controls.enableDamping = true;
 controls.dampingFactor = 0.08;
 controls.enablePan = false;
-controls.minDistance = 18;
-controls.maxDistance = 50;
+controls.minDistance = 20;
+controls.maxDistance = 60;
 
-// Ánh sáng
-scene.add(new THREE.AmbientLight(0xffffff, 0.7));
-const dirLight = new THREE.DirectionalLight(0xffffff, 1.4);
-dirLight.position.set(15, 30, 15);
-scene.add(dirLight);
-scene.add(new THREE.HemisphereLight(0xb3e5fc, 0x3d2b5e, 0.8));
+// ============== ÁNH SÁNG MẠNH ĐỂ QUA KÍNH ==============
+scene.add(new THREE.AmbientLight(0xffffff, 0.9));
+const sun = new THREE.DirectionalLight(0xffffff, 1.8);
+sun.position.set(20, 40, 20);
+scene.add(sun);
+scene.add(new THREE.HemisphereLight(0xb3e5fc, 0x442255, 1.2));
 
+// ============== NỀN TUYẾT (đã hạ thấp xuống) ==============
+const ground = new THREE.Mesh(
+  new THREE.CircleGeometry(150, 64),
+  new THREE.MeshStandardMaterial({ color: 0xf0f4ff, roughness: 0.95 })
+);
+ground.rotation.x = -Math.PI / 2;
+ground.position.y = -10;          // ĐÃ HẠ THẤP XUỐNG
+scene.add(ground);
+
+// ============== QUẢ CẦU KÍNH TRONG SUỐT (r128) ==============
 const globeGroup = new THREE.Group();
 scene.add(globeGroup);
 
-// === NỀN TUYẾT ===
-const ground = new THREE.Mesh(
-  new THREE.CircleGeometry(120, 64),
-  new THREE.MeshStandardMaterial({ color: 0xf5f8ff, roughness: 0.9 })
-);
-ground.rotation.x = -Math.PI / 2;
-ground.position.y = -0.1;
-scene.add(ground);
-
-// === QUẢ CẦU PHA LÊ ===
+// Kính trong suốt (cách cũ nhưng cực đẹp với r128)
 const glass = new THREE.Mesh(
-  new THREE.SphereGeometry(8, 64, 64),
-  new THREE.MeshPhysicalMaterial({
+  new THREE.SphereGeometry(9, 64, 64),
+  new THREE.MeshPhongMaterial({
     color: 0xffffff,
-    metalness: 0,
-    roughness: 0,
-    transmission: 0.98,
-    thickness: 2,
-    clearcoat: 1,
-    clearcoatRoughness: 0,
-    ior: 1.5
+    transparent: true,
+    opacity: 0.25,
+    shininess: 100,
+    specular: 0xffffff,
+    reflectivity: 1,
+    side: THREE.DoubleSide
   })
 );
 globeGroup.add(glass);
 
-// === GIÁ ĐỠ VÀNG ===
-const goldMat = new THREE.MeshStandardMaterial({ color: 0xffd700, metalness: 0.95, roughness: 0.15 });
-const base = new THREE.Mesh(new THREE.CylinderGeometry(9.5, 10.5, 2, 64), goldMat);
-base.position.y = -9.5;
+// Đáy trong suốt (để thấy tuyết rơi bên trong)
+const innerFloor = new THREE.Mesh(
+  new THREE.CircleGeometry(8.5, 64),
+  new THREE.MeshPhongMaterial({ color: 0xffffff, transparent: true, opacity: 0.2 })
+);
+innerFloor.rotation.x = -Math.PI/2;
+innerFloor.position.y = -8.9;
+globeGroup.add(innerFloor);
+
+// ============== GIÁ ĐỠ VÀNG ==============
+const gold = new THREE.MeshPhongMaterial({ color: 0xffd700, shininess: 90, specular: 0xffffff });
+const base = new THREE.Mesh(new THREE.CylinderGeometry(10, 11, 2.5, 64), gold);
+base.position.y = -11.5;
 globeGroup.add(base);
-const stand = new THREE.Mesh(new THREE.CylinderGeometry(4.5, 5.5, 4, 64), goldMat);
-stand.position.y = -12;
+const stand = new THREE.Mesh(new THREE.CylinderGeometry(5, 6, 5, 64), gold);
+stand.position.y = -15;
 globeGroup.add(stand);
 
-// === CÂY THÔNG NOEL THẬT (GLTF) ===
+// ============== CÂY THÔNG + QUÀ + TUYẾT BÊN TRONG ==============
 let tree;
 new THREE.GLTFLoader().load(
   'https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/models/gltf/ChristmasTree/ChristmasTree.gltf',
   gltf => {
     tree = gltf.scene;
-    tree.scale.set(3.5, 3.5, 3.5);
-    tree.position.y = -6;
+    tree.scale.set(3.8, 3.8, 3.8);
+    tree.position.y = -8;
     globeGroup.add(tree);
   }
 );
 
-// === HỘP QUÀ ===
-for(let i = 0; i < 12; i++){
-  const angle = i/12 * Math.PI * 2;
-  const r = 2 + Math.random() * 3;
-  const gift = new THREE.Group();
-  const box = new THREE.Mesh(
-    new THREE.BoxGeometry(1.5,1.5,1.5),
-    new THREE.MeshStandardMaterial({ color: Math.random()>0.5 ? 0xff0033 : 0x00aa00 })
-  );
-  gift.add(box);
-  const ribbon = new THREE.Mesh(new THREE.BoxGeometry(1.7,0.2,0.2), new THREE.MeshStandardMaterial({color:0xffff33}));
-  ribbon.position.y = 0.75;
-  gift.add(ribbon);
-  gift.add(ribbon.clone().rotateY(Math.PI/2));
-  gift.position.set(Math.cos(angle)*r, -7.2, Math.sin(angle)*r);
-  gift.rotation.y = Math.random() * Math.PI;
-  globeGroup.add(gift);
+// 12 hộp quà
+for(let i=0; i<12; i++){
+  const angle = i/12*Math.PI*2;
+  const r = 2.5 + Math.random()*3;
+  const g = new THREE.Group();
+  g.add(new THREE.Mesh(new THREE.BoxGeometry(1.6,1.6,1.6),
+    new THREE.MeshPhongMaterial({color: Math.random()>0.5?0xff0033:0x00aa00})));
+  const rib = new THREE.Mesh(new THREE.BoxGeometry(1.8,0.2,0.2),
+    new THREE.MeshPhongMaterial({color:0xffff66}));
+  rib.position.y=0.8;
+  g.add(rib);
+  g.add(rib.clone().rotateY(Math.PI/2));
+  g.position.set(Math.cos(angle)*r, -8.8, Math.sin(angle)*r);
+  globeGroup.add(g);
 }
 
-// === TUYẾT RƠI TRONG QUẢ CẦU ===
-const snowflakes = [];
-for(let i = 0; i < 500; i++){
+// Tuyết rơi bên trong
+const snowIn = [];
+for(let i=0; i<600; i++){
   const s = new THREE.Mesh(
-    new THREE.SphereGeometry(0.08, 6, 6),
-    new THREE.MeshBasicMaterial({ color: 0xffffff })
+    new THREE.SphereGeometry(0.08,6,6),
+    new THREE.MeshBasicMaterial({color:0xffffff})
   );
   s.position.set(
-    (Math.random()-0.5)*14,
-    Math.random()*20 - 4,
-    (Math.random()-0.5)*14
+    (Math.random()-0.5)*16,
+    Math.random()*25-5,
+    (Math.random()-0.5)*16
   );
   globeGroup.add(s);
-  snowflakes.push(s);
+  snowIn.push(s);
 }
 
-// === TUYẾT RƠI NGOÀI TRỜI ===
-const outsideSnow = [];
-for(let i = 0; i < 400; i++){
+// Tuyết rơi ngoài trời
+for(let i=0; i<500; i++){
   const s = new THREE.Mesh(
-    new THREE.SphereGeometry(0.08, 6, 6),
-    new THREE.MeshBasicMaterial({ color: 0xffffff, transparent: true, opacity: 0.8 })
+    new THREE.SphereGeometry(0.1,6,6),
+    new THREE.MeshBasicMaterial({color:0xffffff, transparent:true, opacity:0.7})
   );
   s.position.set(
-    (Math.random()-0.5)*300,
-    Math.random()*80 + 10,
-    (Math.random()-0.5)*300
+    (Math.random()-0.5)*400,
+    Math.random()*100+20,
+    (Math.random()-0.5)*400
   );
   scene.add(s);
-  outsideSnow.push(s);
+  snowIn.push(s);   // dùng chung mảng để animate luôn
 }
 
-// === ANIMATION ===
-function animate() {
+// ============== ANIMATION ==============
+function animate(){
   requestAnimationFrame(animate);
   controls.update();
 
-  // Tuyết trong quả cầu
-  snowflakes.forEach(s => {
-    s.position.y -= 0.03 + Math.random()*0.03;
+  // Tuyết rơi
+  snowIn.forEach(s=>{
+    s.position.y -= 0.04 + Math.random()*0.04;
     s.position.x += Math.sin(Date.now()*0.001 + s.position.z)*0.02;
-    if(s.position.y < -15){
-      s.position.y = 12;
-      s.position.x = (Math.random()-0.5)*14;
-      s.position.z = (Math.random()-0.5)*14;
-    }
+    if(s.position.y < -20) s.position.y = 30;
   });
 
-  // Tuyết ngoài trời
-  outsideSnow.forEach(s => {
-    s.position.y -= 0.04;
-    if(s.position.y < -5) s.position.y = 80;
-  });
-
-  // Xoay cây thông nhẹ
   if(tree) tree.rotation.y += 0.004;
 
   renderer.render(scene, camera);
@@ -183,12 +175,11 @@ function animate() {
 animate();
 
 // Resize
-window.addEventListener('resize', () => {
+window.addEventListener('resize', ()=>{
   camera.aspect = innerWidth/innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(innerWidth, innerHeight);
 });
 </script>
-
 </body>
 </html>
